# casm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  config.example.toml  index.html  search-index.js
casm/: ALL_CODECS.v.html  fn.process_files.html  fn.run.html  fn.scan_files.html  index.html  process_files.v.html  scan_files.v.html  sidebar-items.js  static.ALL_CODECS.html
casm/codec/: index.html  sidebar-items.js  struct.Codec.html
casm/config/: ConvertProfile.t.html  _IMPL_DESERIALIZE_FOR_ConvertProfile.v.html  constant._IMPL_DESERIALIZE_FOR_Config.html  constant._IMPL_DESERIALIZE_FOR_ConvertProfile.html  index.html  sidebar-items.js  struct.Config.html  struct.ConvertProfile.html
casm/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
casm/musicfile/: Musicfile.t.html  index.html  sidebar-items.js  struct.Musicfile.html
casm/transcoder/: fn.convert.html  fn.filter.html  fn.select_best_rate.html  fn.transcoder.html  index.html  select_best_rate.v.html  sidebar-items.js  struct.Transcoder.html  transcoder.v.html
implementors/casm/errors/: trait.ResultExt.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/ops/deref/: trait.Deref.js
implementors/error_chain/: trait.ChainedError.js
implementors/std/error/: trait.Error.js
src/: cli.yml  codec.rs  codecs.rs  config.rs  gen_codec_types.rs  lib.rs  musicfile.rs  transcoder.rs
src/casm/: codec.rs.html  codecs_generated.rs.html  config.rs.html  lib.rs.html  musicfile.rs.html  transcoder.rs.html
test-files/folder1/: File about Crocodiles.txt
test-files/folder2/: notmusic.txt
